fix(storybook): Add correct gap to the blockquote-grid element Card: https://app.clickup.com/t/863fyjc1a

--- a/src/styles/elements/_blockquote-grid.css
+++ b/src/styles/elements/_blockquote-grid.css
@@ -1,7 +1,7 @@
 .blockquote-grid {
     --blockquote-grid-columns-count: 100%;
-    --blockquote-grid-gap: var(--content-spacing-between-columns);
-    --blockquote-grid-z-index: var(--content-spacing-between-columns);
+    --blockquote-grid-gap: var(--spacing-normal);
+    --blockquote-grid-z-index: var(--z-index-content);
     --blockquote-grid-margin: var(--spacing-between-elements-normal) auto 0;
     --blockquote-grid-width: var(--content-width-with-padding);
     --blockquote-grid-max-width: var(--content-wide-max-width);
@@ -30,6 +30,10 @@
 }
 
 @media screen and (min-width: 640px) {
+    .blockquote-grid {
+        --blockquote-grid-gap: var(--content-spacing-between-columns);
+    }
+
     .blockquote-grid[blockquote-grid-count="2"] {
         --blockquote-grid-columns-count: 2;
     }
